Add the xyz files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,9 +22,4 @@ add_executable(${PROJECT_NAME} ${SRCFILES})
 
 set_property(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD 17)
 
-# Add MediaPipe
-#include_directories(${CMAKE_SOURCE_DIR})
-#add_library(MediaPipe SHARED IMPORTED)
-#set_property(TARGET MediaPipe PROPERTY IMPORTED_LOCATION ${CMAKE_SOURCE_DIR}/mediapipe/lib/libexample.so)
-
-target_link_libraries(${PROJECT_NAME} igl::core igl::opengl_glfw igl::opengl_glfw_imgui Open3D::Open3D) #MediaPipe
+target_link_libraries(${PROJECT_NAME} igl::core igl::opengl_glfw igl::opengl_glfw_imgui Open3D::Open3D)
